# nerdnote

./: README.md  pyproject.toml  requirements.txt
docs/: documentation.md  install.md
src/conote/: main.py
src/conote/modules/: __init__.py  controller.py  dbase.py  markdown.py  mdown.py
src/conote/modules/tools/: __init__.py  tool.py
src/conotes/: __init__.py
src/conotes/modules/controller/: dbase.py
src/conotes/modules/markdown/: markdown.py
src/nerdnote/: __init__.py  main.py
src/nerdnote/modules/: controller.py  dbase.py  mdown.py
src/nerdnote/modules/tools/: __init__.py  tool.py
src/tamplate_project_name/: __init__.py
tests/: test_controller.py  test_dbase.py  test_mdown.py  test_tool.py
