[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conote"
version = "0.0.1.dev251127"
description = "Note taking tool from console."
authors = [
    { name = "stpatrirach" }
]
requires-python = ">=3.10"
dependencies = [
    "mdutils >= 1.8.1",
    "rich >= 14.2.0"

    ]

[tool.setuptools]
packages = [
"conote",
"conote.modules",
"conote.modules.tools",
]

package-dir = {"" = "src"}

[project.scripts]
 conotes = "conote.main:main"
