[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerdnote"
version = "0.0.1a20260101"
description = "Note taking tool from console."
authors = [
    { name = "stpatrirach" }
]
requires-python = ">=3.10"
dependencies = [
    "mdutils >= 1.8.1",
    "rich >= 14.2.0",
    "click >= 8.3.1",
    "markdown_pdf >= 1.10",
    'markdown >= 3.10'

    ]

[tool.setuptools]
packages = [
"nerdnote",
"nerdnote.modules",
"nerdnote.modules.tools",]

package-dir = {"" = "src"}

[project.scripts]
 nn = "nerdnote.main:main"
